<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuAddArc"
        android:title="@string/mnuAddArc" />
    <item
        android:id="@+id/mnuUpdateNodeArc"
        android:title="@string/mnuUpdateNodeArc" />
    <item
        android:id="@+id/mnuMoovGraph"
        android:title="@string/mnuMoovGraph" />
    <item
        android:id="@+id/mnuResetGraph"
        android:title="@string/mnuResetGraph" />
    <item
        android:id="@+id/mnuMoovArc"
        android:title="Mode déplacement Arc" />

    <item
        android:id="@+id/sendMail"
        android:title="@string/envoyer_par_mail" />
</menu>